# genQA-eval

./: .env.example  .gitignore  APP_OVERVIEW.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_CHECKLIST.md  QUICK_START_RAG_EVAL.md  RAG_EVAL_SERVICE_README.md  README.md  RUN_ALL_PENDING_FEATURE.md  TODO  WORKFLOW_README.md  example_rag_evaluation.py  main.py  pyproject.toml  schema.db  test_groq_provider_routing.py  test_new_models.py  test_retry_mechanisms.py  test_retry_mechanisms_simple.py  test_semantic_similarity_integration.py  test_system.py
.claude/: memory.md  settings.local.json
chunker/: __init__.py  chunker.py
data/: chroma.sqlite3  db.db  db.db-shm  db.db-wal
db/: db.py
examples/: complete_rag_eval_example.py  progress_example.py  workflow_example.py
extractors/: __init__.py  extractors.py
frontend/: README.md  index.html  package-lock.json  package.json
handlers/: config_handler.py  corpus_handler.py  corpus_item_faq_handler.py  corpus_item_file_handler.py  corpus_item_url_handler.py  corpus_items_handler.py  evals_handler.py  project_handler.py  prompts_handler.py  qa_handler.py  test_runs_handler.py  tests_handler.py  websocket_handler.py  workflow_handler.py
llm/: README.md  __init__.py  example_usage.py  groq_llm.py  groq_provider.py  interfaces.py  model_factory.py  openai_embeddings.py  openai_llm.py  openai_provider.py  prompting.py
metrics/: QUICK_START.md  RAG_EVALUATOR_README.md  README.md  __init__.py  integration_example.py  integration_example_llm_judge.py  rag_evaluator.py  semantic_similarity.py  test_metrics.py  (+3 more)
(+69 files in other folders)
