[project]
name = "rag-eval-core"
version = "0.1.0"
description = "API for managing RAG (Retrieval-Augmented Generation) evaluation projects, tests, corpus, configurations, evaluations, and vector database interactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]
