[project]
name = "rag-eval-core"
version = "0.1.0"
description = "API for managing RAG (Retrieval-Augmented Generation) evaluation projects, tests, corpus, configurations, evaluations, and vector database interactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "fastapi>=0.118.0",
    "langchain>=0.3.0",
    "uvicorn>=0.37.0",
    "pypdf2>=3.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "python-multipart>=0.0.20",
    "openai>=1.0.0",
    "aiohttp>=3.13.0",
]
